# wasmtime

./: Cargo.toml  test_fma.c
.github/workflows/: main.yml
cranelift/codegen/: build.rs
cranelift/codegen/src/: bitset.rs  context.rs  data_value.rs  dominator_tree.rs  flowgraph.rs  inst_predicates.rs  isle_prelude.rs  jump_threading.rs  lib.rs  prelude.isle  prelude_lower.isle  settings.rs  simple_preopt.rs  souper_harvest.rs  timing.rs  write.rs
cranelift/filetests/: Cargo.toml
cranelift/filetests/src/: function_runner.rs  lib.rs  runone.rs  test_interpret.rs  test_jump_threading.rs  test_run.rs
cranelift/frontend/src/: frontend.rs  ssa.rs
cranelift/fuzzgen/src/: arbitrary_ext.rs  config.rs  function_generator.rs  lib.rs  signature_generator.rs
cranelift/interpreter/src/: interpreter.rs  step.rs  value.rs
cranelift/jit/: Cargo.toml
cranelift/jit/src/: backend.rs  compiled_blob.rs
cranelift/jit/tests/: got.rs  plt.rs
cranelift/module/src/: data_context.rs  lib.rs  module.rs
cranelift/object/src/: backend.rs
cranelift/reader/src/: lexer.rs  parser.rs  testfile.rs
cranelift/rt/: Cargo.toml  build.rs
cranelift/rt/src/: lib.rs  x86_64.s
cranelift/src/: compile.rs  disasm.rs
cranelift/wasm/src/: code_translator.rs
crates/asm-macros/src/: lib.rs
crates/fuzzing/src/: oracles.rs
crates/jit-icache-coherence/: Cargo.toml  build.rs
crates/jit-icache-coherence/src/: lib.rs
crates/runtime/src/: externref.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: engine.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cranelift-fuzzgen.rs
(+375 files in other folders)
